--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lsb (4.0-0ubuntu20.3pexip1) pexip; urgency=low
+
+  * Prepare Pexip packaging
+
+ -- John-Mark Bell <jmb@pexip.com>  Thu, 26 Dec 2013 23:30:04 +0000
+
 lsb (4.0-0ubuntu20.3) precise-proposed; urgency=low
 
   * lsb_release.py: Use the subprocess module instead of the commands
