--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lsb (9.20161125pexip1) pexip; urgency=medium
+
+  * Migrate to Stretch
+
+ -- John-Mark Bell <jmb@pexip.com>  Tue, 10 Jul 2018 11:28:19 +0000
+
 lsb (9.20161125) unstable; urgency=medium
 
   [ Didier Raboud ]
