--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,37 @@
+lsb (11.1.0) unstable; urgency=medium
+
+  * Drop cursor-moving code from init-functions
+    (Closes: #934502, #670144, #672929)
+
+ -- Dmitry Bogatov <KAction@debian.org>  Fri, 16 Aug 2019 05:20:52 +0000
+
+lsb (11.0.1) unstable; urgency=medium
+
+  * Improve portability of init-functions.d/00-verbose.
+    Thanks to Thorsten Glaser <t.glaser@tarent.de>
+
+ -- Dmitry Bogatov <KAction@debian.org>  Wed, 14 Aug 2019 22:31:15 +0000
+
+lsb (11.0.0) unstable; urgency=medium
+
+  * New maintainer (Closes: #924519)
+  * Introduce logging functions that check ${VERBOSE} (Closes: #928920)
+  * Trim trailing whitespace.
+  * Bump debhelper from old 11 to 12.
+  * Change priority extra to priority optional.
+  * Update standards version to 4.4.0
+  * Reformat debian/changelog to fit 80 column
+  * Remove unused `debian/gbp.conf'
+  * Remove redundant priority field in bin:lsb-release
+  * Remove suggestion for non-existent bin:lsb
+
+ -- Dmitry Bogatov <KAction@debian.org>  Tue, 13 Aug 2019 18:24:19 +0000
+
 lsb (10.2019051400) unstable; urgency=medium
 
   [ Harald Dunkel ]
-  * pidofproc: use "pidof -c" to avoid pidofproc results from containers or chroots
-    (Closes: #888743)
+  * pidofproc: use "pidof -c" to avoid pidofproc results from containers
+    or chroots (Closes: #888743)
 
  -- Didier Raboud <odyx@debian.org>  Tue, 14 May 2019 08:50:39 +0200
 
@@ -529,7 +558,7 @@ lsb (3.2-26) unstable; urgency=low
   * Move lsb(8) to lsb-core package.  (Closes: #589101)
   * Update da translation of debconf templates; thanks to Joe Dalton.
     (Closes: #599461)
-  
+
  -- Chris Lawrence <lawrencc@debian.org>  Wed, 06 Oct 2010 20:35:30 -0500
 
 lsb (3.2-25) unstable; urgency=low
@@ -625,7 +654,7 @@ lsb (3.2-20) unstable; urgency=low
 lsb (3.2-19) unstable; urgency=low
 
   * Return 0 in log_failure_msg too.
-  
+
  -- Chris Lawrence <lawrencc@debian.org>  Mon, 04 Aug 2008 20:29:54 -0500
 
 lsb (3.2-18) unstable; urgency=low
