--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lsb (10.2019051400pexip3) pexip; urgency=medium
+
+  * Bump version to change overrides
+
+ -- Vincent Sanders <vince@pexip.com>  Tue, 21 Jul 2020 08:26:13 +0000
+
 lsb (10.2019051400pexip2) pexip; urgency=medium
 
   * Rebuild in buster environment
