--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lsb (11.1.0pexip1) pexip; urgency=medium
+
+  * Initial bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 02 Jun 2022 14:42:34 +0100
+
 lsb (11.1.0) unstable; urgency=medium
 
   * Drop cursor-moving code from init-functions
