--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lsb (11.1.0pexip3) pexip-bullseye; urgency=medium
+
+  * Bullseye rebuild for ARM64 inclusion
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Mon, 05 Sep 2022 10:34:35 +0100
+
 lsb (11.1.0pexip2) pexip-bullseye; urgency=medium
 
   * Main bullseye build
