--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lsb (11.6+pexip24u3) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 16:11:29 +0000
+
 lsb (11.6pexip2) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
